2006-09-11  Per Bothner  <per@bothner.com>

	* SourceDebugExtAttr.java: Remove unused local variable.

2006-06-12  Per Bothner  <per@bothner.com>

	* ClassType.java (isSubclass): New method.

2006-05-30  Per Bothner  <per@bothner.com>

	* ClassType.java (classfileFormatVersion): New field.
	(major_version, minor_version): Remove constants.
	(getClassfileMajorVersion, getClassfileMinorVersion.
	setClassfileVersion, setClassfileVersionJava5): New me thods.
	(writeToStream): Write major/minor version values instead of constants
	* ClassFileInput.java (readHeader): Read and remember version numbers.

2006-05-23  Per Bothner  <per@bothner.com>

	* ClassFileInput.java: Remove unused local variables.
	* ClassType.java: Likewise.
	* ListCodeSize.java: Likewise.
	* SourceDebugExtAttr.java: Likewise.

2006-05-20  Per Bothner  <per@bothner.com>

	* Field.java (setConstantValue): Allocate constant pool if needed.

2006-04-10  Per Bothner  <per@bothner.com>

	* ClassType.java (getField): Also check super-interfaces.

2006-03-07  Per Bothner  <per@bothner.com>

	* Type.java (<init>(Type)): New copy constructor.

2006-03-01  Per Bothner  <per@bothner.com>

	* Method.java (cleanupAfterCompilation): New method.
	* ClassType.java (cleanupAfterCompilation): New method.

2006-02-19  thomas kirk  <tk@research.att.com>
	    Per Bothner  <per@bothner.com>

	* ZipLoader.java (loadAllClasses): Return first class
	in archive (i.e. the main class).

2006-02-19  Per Bothner  <per@bothner.com>

	* Member.java: New interface.
	* Makefile.am: Update coordingly.
	* Field.java: Implements Member.
	* Method.java: Implement Member.

2006-02-01  Per Bothner  <per@bothner.com>

	* ListCodeSize.java: New utility application class.
	* Makefile.am: Update accordingly.
	* Method.java (listParameters): New method.
	(toString): Use listParameters.

	* ArrayClassLoader.java: Remove unneeded import.

2006-01-24  Per Bothner  <per@bothner.com>

	* ClassType.java (getDeclaredMethod): If arg_types[i] is null,