@@ -1,3 +1,9 @@
+2006-10-31  Per Bothner  <per@bothner.com>
+
+	* ModuleInfo.java (setupModuleExp): If moduleClass is non-null,
+	use that as the Class.  This fixes Savannah bug #15881 "classnotfound
+	exception compiling application of define-syntax macro".
+
 2006-10-30  Per Bothner  <per@bothner.com>
 
 	* QuoteExp.java (inline): Minor optimization - reuse ApplyExp.
