@@ -1,3 +1,7 @@
+2006-10-31  Per Bothner  <per@bothner.com>
+
+	* Type.java (mapClassToType): Use WeakHashMap if JAVA2.
+
 2006-09-11  Per Bothner  <per@bothner.com>
 
 	* SourceDebugExtAttr.java: Remove unused local variable.
